--- a/.gitignore
+++ b/.gitignore
@@ -299,3 +299,5 @@ pip-selfcheck.json
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/python,django,visualstudiocode,virtualenv
+
+# Demo
